--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-stockcharts": "^0.7.8",
+    "react-uuid": "^1.0.2",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
   },
